Set word api created
