# swagger.json
@@ -376,6 +376,37 @@
           }
         }
       }
+    },
+    "/words/add": {
+      "post": {
+        "tags": ["Words"],
+        "summary": "Creates words",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "words": { "type": "array" }
+              },
+              "required": ["words"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Words Added successfully"
+          },
+          "400": {
+            "description": "Invalid words"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
     }
   },
   "securityDefinitions": {
